# wasm-rust

./: .gitignore  README.md
api/: Cargo.toml  README.md
api-wasm/: .gitignore  Cargo.toml  PROJECT_DOCUMENTATION.md  README.md  package.json  test.html  test.ts  verify_build.sh  wasm-pack.toml
api-wasm/examples/: README.md
api-wasm/src/: lib.rs
api-wasm/tests/: integration_test.rs  login_test.rs
api/src/: lib.rs
