[package]
name = "api-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.77", features = [
  "console",
  "Request",
  "RequestInit",
  "RequestMode",
  "RequestCredentials",
  "Response",
  "Headers",
  "Window",
  "WorkerGlobalScope",
] }
async-trait = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
default = ["console_error_panic_hook"]
wasm = []

[profile.release]
opt-level = 3
lto = true
