[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Add your API server dependencies here, for example:
# axum = "0.7"
# tokio = { version = "1", features = ["full"] }
# tower-http = { version = "0.5", features = ["cors"] }
